--- a/infomapper/src/app/map-components/dialog-content/dialog-gapminder/gapminder-js/css/style.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-gapminder/gapminder-js/css/style.css
@@ -87,6 +87,7 @@ div.tab button.active {
 /* style main row (row 2) */
 #mainrow{
   padding-right:5px;
+  height: 100%;
 }
 
 /* remove margin-left from chart div which contains the acutal visualization*/
@@ -150,6 +151,10 @@ hovered over in which it will pop up */
   fill: none;
 }
 
+.x.axis {
+  height: 500px;
+}
+
 /* style x and y axis */
 .ys.x.axis .domain{
   stroke: #808B96;
@@ -164,7 +169,33 @@ hovered over in which it will pop up */
   stroke-dasharray: 5,5;
 }
 
-/* style for year slider below chart given directly within D3 code  */
+/* style for year slider below chart */
+.track,
+.track-inset,
+.track-overlay {
+  stroke-linecap: round;
+}
+.track {
+  stroke: #000;
+  stroke-opacity: 0.3;
+  stroke-width: 4px;
+}
+.track-inset {
+  stroke: #ddd;
+  stroke-width: 2px;
+}
+.track-overlay {
+  pointer-events: stroke;
+  stroke-width: 50px;
+  stroke: transparent;
+  cursor: crosshair;
+}
+.handle {
+  fill: #fff;
+  stroke: #000;
+  stroke-opacity: 0.5;
+  stroke-width: 1.25px;
+}
 
 /* style buttons with font size 12px */
 .button{
@@ -192,6 +223,10 @@ hovered over in which it will pop up */
 /* style dropedown menu */
 #providerNames{
   font-size:12px;
+}
+
+#table {
+  height: 100%;
 }
 
 #tablerows{
@@ -275,14 +310,3 @@ div.tooltip {
     border: .5px solid #afaeae;       
     box-shadow:1px 1px 3px #888888;   
 }
-
-
-  /* style sideTools div */
-  /* #sideTools{
-    display:inline-block;
-    margin-top: 20px;
-    overflow-y: auto;
-    vertical-align: top;
-    padding:0;
-    font-size:12px;
-  } */
